{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 450,
  "lineage": "48cc6b0b-3a6b-ecf9-a9f7-660e16a8214f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "domain": "vpc",
            "id": "eipalloc-0e27c98e49d7e23ed",
            "network_border_group": "eu-west-3",
            "private_dns": "ip-172-32-8-90.eu-west-3.compute.internal",
            "public_dns": "ec2-35-181-226-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.226.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:internet-gateway/igw-06c2fd819b9cce2f9",
            "id": "igw-06c2fd819b9cce2f9",
            "owner_id": "193672518836",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-012d6ca9f3a84b89c",
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "connectivity_type": "public",
            "id": "nat-0b4e2b8f1dc19ce44",
            "subnet_id": "subnet-012d6ca9f3a84b89c",
            "tags": {
              "Name": "NAT_subnet-012d6ca9f3a84b89c"
            },
            "tags_all": {
              "Name": "NAT_subnet-012d6ca9f3a84b89c"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-03186e5aa2e782d1a",
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "connectivity_type": "public",
            "id": "nat-0c75df02e4c8ec5e5",
            "subnet_id": "subnet-03186e5aa2e782d1a",
            "tags": {
              "Name": "NAT_subnet-03186e5aa2e782d1a"
            },
            "tags_all": {
              "Name": "NAT_subnet-03186e5aa2e782d1a"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-04800967de03dcf29",
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "connectivity_type": "public",
            "id": "nat-068a1dafe4ee04f28",
            "subnet_id": "subnet-04800967de03dcf29",
            "tags": {
              "Name": "NAT_subnet-04800967de03dcf29"
            },
            "tags_all": {
              "Name": "NAT_subnet-04800967de03dcf29"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0a648fd8743e4b161",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "association_id": "eipassoc-058cb1e8cb5d1102f",
            "connectivity_type": "public",
            "id": "nat-0402be76a0145ef1b",
            "network_interface_id": "eni-00e59ab88322bd550",
            "private_ip": "172.32.24.7",
            "public_ip": "35.181.226.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a648fd8743e4b161",
            "tags": {
              "Name": "NAT_subnet-0a648fd8743e4b161"
            },
            "tags_all": {
              "Name": "NAT_subnet-0a648fd8743e4b161"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-0f9ea5a7b9d9f0ac4",
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e27c98e49d7e23ed",
            "connectivity_type": "public",
            "id": "nat-0edd53e2c298054e2",
            "subnet_id": "subnet-0f9ea5a7b9d9f0ac4",
            "tags": {
              "Name": "NAT_subnet-0f9ea5a7b9d9f0ac4"
            },
            "tags_all": {
              "Name": "NAT_subnet-0f9ea5a7b9d9f0ac4"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c2fd819b9cce2f9",
            "id": "r-rtb-082725156619dbc841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082725156619dbc84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:route-table/rtb-09b99152ade1cc38d",
            "id": "rtb-09b99152ade1cc38d",
            "owner_id": "193672518836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_database",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:route-table/rtb-0569e9046013b8f5b",
            "id": "rtb-0569e9046013b8f5b",
            "owner_id": "193672518836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_database"
            },
            "tags_all": {
              "Name": "private_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:route-table/rtb-082725156619dbc84",
            "id": "rtb-082725156619dbc84",
            "owner_id": "193672518836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c2fd819b9cce2f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8733d6d96cfbc4",
            "route_table_id": "rtb-09b99152ade1cc38d",
            "subnet_id": "subnet-0f9ea5a7b9d9f0ac4"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae9505609d0eeec4",
            "route_table_id": "rtb-09b99152ade1cc38d",
            "subnet_id": "subnet-04800967de03dcf29"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b585e4e9c12c4a99",
            "route_table_id": "rtb-09b99152ade1cc38d",
            "subnet_id": "subnet-035a562ebaf9b23a9"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffabac3398edcdad",
            "route_table_id": "rtb-082725156619dbc84",
            "subnet_id": "subnet-0a648fd8743e4b161"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0a8665a17055e8e",
            "route_table_id": "rtb-082725156619dbc84",
            "subnet_id": "subnet-03186e5aa2e782d1a"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0468808b7323c59af",
            "route_table_id": "rtb-082725156619dbc84",
            "subnet_id": "subnet-0bdf8ffdf09a3bc3e"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00417e7d7ffa9171f",
            "route_table_id": "rtb-0569e9046013b8f5b",
            "subnet_id": "subnet-027af8104c6117abf"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "7",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02afd3a410268a711",
            "route_table_id": "rtb-0569e9046013b8f5b",
            "subnet_id": "subnet-012d6ca9f3a84b89c"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "8",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0687e589dd862fdd9",
            "route_table_id": "rtb-0569e9046013b8f5b",
            "subnet_id": "subnet-03d626084fe399999"
          },
          "dependencies": [
            "aws_route_table.table",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-0f9ea5a7b9d9f0ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.32.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ea5a7b9d9f0ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_az_0",
              "Nat": "true",
              "Type": "private"
            },
            "tags_all": {
              "Name": "private_az_0",
              "Nat": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-04800967de03dcf29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.32.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04800967de03dcf29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_az_1",
              "Nat": "true",
              "Type": "private"
            },
            "tags_all": {
              "Name": "private_az_1",
              "Nat": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-035a562ebaf9b23a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.32.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a562ebaf9b23a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_az_2",
              "Nat": "false",
              "Type": "private"
            },
            "tags_all": {
              "Name": "private_az_2",
              "Nat": "false",
              "Type": "private"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-0a648fd8743e4b161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.32.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a648fd8743e4b161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az_0",
              "Nat": "true",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public_az_0",
              "Nat": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-03186e5aa2e782d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.32.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03186e5aa2e782d1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az_1",
              "Nat": "true",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public_az_1",
              "Nat": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-0bdf8ffdf09a3bc3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.32.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdf8ffdf09a3bc3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az_2",
              "Nat": "false",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public_az_2",
              "Nat": "false",
              "Type": "public"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-027af8104c6117abf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.32.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027af8104c6117abf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_database_az_0",
              "Nat": "false",
              "Type": "private_database"
            },
            "tags_all": {
              "Name": "private_database_az_0",
              "Nat": "false",
              "Type": "private_database"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-012d6ca9f3a84b89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.32.56.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012d6ca9f3a84b89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_database_az_1",
              "Nat": "true",
              "Type": "private_database"
            },
            "tags_all": {
              "Name": "private_database_az_1",
              "Nat": "true",
              "Type": "private_database"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:subnet/subnet-03d626084fe399999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.32.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d626084fe399999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193672518836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_database_az_2",
              "Nat": "false",
              "Type": "private_database"
            },
            "tags_all": {
              "Name": "private_database_az_2",
              "Nat": "false",
              "Type": "private_database"
            },
            "vpc_id": "vpc-0e60d71ec1f22d06e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:193672518836:vpc/vpc-0e60d71ec1f22d06e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-00d05b7393ce0ecf1",
            "default_route_table_id": "rtb-06dae0a860c724d05",
            "default_security_group_id": "sg-0db4a0455ab35182c",
            "dhcp_options_id": "dopt-01e6ae857ea055d41",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e60d71ec1f22d06e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dae0a860c724d05",
            "owner_id": "193672518836",
            "tags": {
              "Name": "High-Resiliency-Application"
            },
            "tags_all": {
              "Name": "High-Resiliency-Application"
            }
          }
        }
      ]
    }
  ]
}